project redo - still issues with logo image alignment

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -65,3 +65,163 @@ h1, h2, h3, h4, h5 {
     margin-bottom: 15px;
 }
 /* normalized css ends */
+
+.container{
+	box-sizing:border-box;
+	width:800px;
+	height: 100%;
+	margin-left:22.5%;
+	margin-right:10%;
+
+	
+}
+
+header{
+	display:inline-block;
+	width:100%;
+	padding-bottom:5%;
+	margin-top:2%;
+	
+
+}
+
+.navBar{
+	display:inline-block;
+	width:79%;
+	/* text-align:center; */
+	padding-bottom:2%;
+}
+
+.navBar a{
+	margin-right:7%;
+	/* margin-left:3%; */
+	/* margin-bottom: 10%; */
+	text-decoration:none;
+	color:gray;
+}
+
+.navLogo{
+	display:inline-block;
+	width:20%;
+	/* text-align:center; */
+	/* margin-top:3%; */
+	/* padding-top: 3%; */
+	
+	
+}
+
+.navLogo img{
+	width:100%;
+	/* padding-top:10%; */
+}
+
+.heroBanner{
+	display:inline-block;
+	width:100%;
+	margin-bottom:10%;
+}
+
+.heroLeft{
+	display:inline-block;
+	width:49%;
+	text-align:center;
+	/* padding-bottom:10%; */
+	
+}
+
+.heroLeft h1{
+	font-size:60px;
+	margin-bottom:10%;
+}
+
+.heroLeft a{
+	height:50px;
+	width: 200px;
+	border: 2px solid black;
+	text-decoration:none;
+	color:black;
+	/* margin-top:2%; */
+	padding-right:30px;
+	padding-left:30px;
+	font-weight: bold;
+
+}
+
+.heroImg{
+	display:inline-block;
+	width:49%;
+	text-align:center;
+}
+
+.heroImg img{
+	width:75%;
+}
+
+.copy{
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
+}
+
+
+.topRow{
+	/* display:inline-block; */
+	width:100%;
+	margin-bottom:5%;
+	margin-top:5%;
+}
+
+.topRowRight{
+display:inline-block;
+width:48%;
+margin-left:1%;
+}
+
+.topRowLeft{
+	display:inline-block;
+	width:48%;
+	margin-right:1%;
+}
+
+.middleImg{
+	width:95%;
+	margin-bottom:5%;
+	margin-left:1.5%;
+}
+
+.middleImg img{
+	width:100%;
+}
+
+.bottomRow{
+	/* display:inline-block; */
+	width:100%;
+	margin-bottom:5%;
+}
+
+.bottomRowLeft{
+	display:inline-block;
+	width:30%;
+	margin-left:1%;
+}
+
+.bottomRowMiddle{
+	display:inline-block;
+	width:30%;
+}
+
+.bottomRowRight{
+	display:inline-block;
+	width:30%;
+}
+
+.contact{
+	margin-top:5%;
+}
+
+
+footer{
+	text-align:center;
+	margin-bottom:5%;
+	margin-top:5%;
+}
+
